@@ -1,4 +1,6 @@
 using System.Collections.Generic;
+using System.Drawing;
+using System.Drawing.Imaging;
 using System.Windows.Automation;
 using White.Core.AutomationElementSearch;
 using White.Core.Factory;
@@ -53,6 +55,26 @@ namespace White.Core
         public virtual List<Window> Windows()
         {
             return WindowFactory.Desktop.DesktopWindows();
+        }
+
+        /// <summary>
+        /// Captures a screenshot of the entire desktop, and returns the bitmap
+        /// </summary>
+        public static Bitmap CaptureScreenshot()
+        {
+            var screenCapture = new ScreenCapture();
+            return screenCapture.CaptureScreenShot();
+        }
+
+        /// <summary>
+        /// Takes a screenshot of the entire desktop, and saves it to disk
+        /// </summary>
+        /// <param name="filename">The fullname of the file (including extension)</param>
+        /// <param name="imageFormat"></param>
+        public static void TakeScreenshot(string filename, ImageFormat imageFormat)
+        {
+            var bitmap = CaptureScreenshot();
+            bitmap.Save(filename, ImageFormat.Png);
         }
     }
 }
